# src/model/user.ts
@@ -2,6 +2,6 @@ export interface User {
   id: number;
   email: string;
   name: string;
-  status?: "Happy" | "Sad";
-  phoneNumbers: string[];
+  status: string;
+  password: string;
 }
